# en-2fa-monitor

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
examples/: era-mainnet.service.yml  stage-validium.service.yml
src/: main.rs
