[package]
name = "en-2fa-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
hex = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# EVM / RPC
ethers = { version = "2", features = ["abigen", "rustls"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
url = "2"
serde_json = "1"
